scripts/k8s/annotation/2contains_all_v1/2_policy1_binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "binding1"
spec:
  policyName: "demo-contains-all-v1"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: test
